v5.11.1/python/_sources/paraview.simple.SliceWithPlane.rst.txt
paraview.simple.SliceWithPlane
==============================

.. currentmodule:: paraview.simple

.. autofunction:: SliceWithPlane

Data Descriptors
----------------


   
   BuildHierarchy
       If enabled and input is not an Image Data, Tree hierarchy will be computed, for a faster slice computation.
   
   BuildTree
       If enabled and input is not an Image Data, Sphere Tree will be computed, for a faster slice computation.
   
   ComputeNormals
       If enabled, compute the normal on each cell. Since all output cells are coplanar,
       the normal generated is simply the normal of the plane used to slice with.
       By default, computing of normals is disabled.
   
   GeneratePolygons
       If enabled and input is a vtkImageData, vtkStructuredGrid or vtkRectilinearGrid,
       output slice will consist of polygons instead of only triangles.
   
   Input
       This property specifies the input of the slice filter.
   
   InterpolateAttributes
       If enabled, interpolate attribute data. By default this is
       enabled. Point data is always interpolated. Cell data is transferred
       unless input is an image data.
   
   Level
       Set maximum slice resolution.
   
   Mergeduplicatedpointsintheslice
       This parameter controls whether to merge duplicated points in the slice.
   
   PlaneType
       This property sets the parameters of the plane function.
   
   UseDual
       If checked, uses the dual of the hyper tree grid.
   
   UseNativeCutter
       This property specifies whether the ParaView's generic
       dataset cutter is used instead of the specialized AMR cutter.
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`